<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/featured_destination_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/featured_destination_viewpager_item"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <RelativeLayout
                android:id="@+id/viewPagerIndicator"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/viewPagerCountDots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="horizontal" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/topdestination_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/top_destinations"
                    android:textSize="17sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_home_topdestinations_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/see_all"
                    android:textSize="17sp"
                    android:textColor="@color/blue" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/top_destination_horizontal_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/topdestination_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/trendingdestination_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/trending_destinations"
                    android:textSize="17sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_home_trending_destination_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/see_all"
                    android:textSize="17sp"
                    android:textColor="@color/red"/>
            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending_destination_horizontal_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/trendingdestination_title"
                android:scrollbars="none" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/nearbydestination_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nearby_destinations"
                    android:textSize="17sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/fragment_home_nearby_destination_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/explore_all"
                    android:textSize="17sp"
                    android:textColor="@color/green"/>
            </RelativeLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/nearbv_destination_horizontal_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/trendingdestination_title"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>